--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PWA</title>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="style-src 'self' fonts.googleapis.com;
+      img-src *;
+      script-src 'self' 'unsafe-inline';
+      connect-src random-data-api.com 'self';
+      font-src 'self' fonts.gstatic.com;
+      "
+    />
     <!--
+      
     Add a google font and the preconnects
   -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <!--
     Add the other links for the PWA - manifest, icons, theme, etc
